--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         imageUrl:
           'https://form.office.naver.com/getStreamImgByDocId.cmd?docId=NGYxNjY4MjUtNjQyNS00MWM2LThlMmEtZTg1ODI2YjZlMWIz&imageName=0ca5af84-6533-4058-8ed2-0715b7638e55.jpeg',
         link: {
-          mobileWebUrl: 'https://form.office.naver.com/getStreamImgByDocId.cmd?docId=NGYxNjY4MjUtNjQyNS00MWM2LThlMmEtZTg1ODI2YjZlMWIz&imageName=0ca5af84-6533-4058-8ed2-0715b7638e55.jpeg',
-          webUrl: 'https://form.office.naver.com/getStreamImgByDocId.cmd?docId=NGYxNjY4MjUtNjQyNS00MWM2LThlMmEtZTg1ODI2YjZlMWIz&imageName=0ca5af84-6533-4058-8ed2-0715b7638e55.jpeg',
+          mobileWebUrl: 'https://naver.me/F36kltPm',
+          webUrl: 'https://naver.me/F36kltPm',
         },
       },
       social: {
@@ -34,8 +34,8 @@
         {
           title: '장애인의 날 알아보기',
           link: {
-            mobileWebUrl: 'https://form.office.naver.com/getStreamImgByDocId.cmd?docId=NGYxNjY4MjUtNjQyNS00MWM2LThlMmEtZTg1ODI2YjZlMWIz&imageName=0ca5af84-6533-4058-8ed2-0715b7638e55.jpeg',
-            webUrl: 'https://form.office.naver.com/getStreamImgByDocId.cmd?docId=NGYxNjY4MjUtNjQyNS00MWM2LThlMmEtZTg1ODI2YjZlMWIz&imageName=0ca5af84-6533-4058-8ed2-0715b7638e55.jpeg',
+            mobileWebUrl: 'https://naver.me/F36kltPm',
+            webUrl: 'https://naver.me/F36kltPm',
           },
         },
       ],
