--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         imageUrl:
           'https://form.office.naver.com/form/getStreamImg.cmd?docId=NGYxNjY4MjUtNjQyNS00MWM2LThlMmEtZTg1ODI2YjZlMWIz&filename=0ca5af84-6533-4058-8ed2-0715b7638e55.jpeg',
         link: {
-          mobileWebUrl: 'https://form.office.naver.com/form/editor.cmd?initialView=summary&docId=NGYxNjY4MjUtNjQyNS00MWM2LThlMmEtZTg1ODI2YjZlMWIz&baseFolder=%252F',
-          webUrl: 'https://form.office.naver.com/form/editor.cmd?initialView=summary&docId=NGYxNjY4MjUtNjQyNS00MWM2LThlMmEtZTg1ODI2YjZlMWIz&baseFolder=%252F',
+          mobileWebUrl: 'https://form.office.naver.com/form/responseView.cmd?formkey=NGYxNjY4MjUtNjQyNS00MWM2LThlMmEtZTg1ODI2YjZlMWIz&sourceId=urlshare',
+          webUrl: 'https://form.office.naver.com/form/responseView.cmd?formkey=NGYxNjY4MjUtNjQyNS00MWM2LThlMmEtZTg1ODI2YjZlMWIz&sourceId=urlshare',
         },
       },
       social: {
@@ -34,8 +34,8 @@
         {
           title: '장애인의 날 알아보기',
           link: {
-            mobileWebUrl: 'https://form.office.naver.com/form/editor.cmd?initialView=summary&docId=NGYxNjY4MjUtNjQyNS00MWM2LThlMmEtZTg1ODI2YjZlMWIz&baseFolder=%252F',
-            webUrl: 'https://form.office.naver.com/form/editor.cmd?initialView=summary&docId=NGYxNjY4MjUtNjQyNS00MWM2LThlMmEtZTg1ODI2YjZlMWIz&baseFolder=%252F',
+            mobileWebUrl: 'https://form.office.naver.com/form/responseView.cmd?formkey=NGYxNjY4MjUtNjQyNS00MWM2LThlMmEtZTg1ODI2YjZlMWIz&sourceId=urlshare',
+            webUrl: 'https://form.office.naver.com/form/responseView.cmd?formkey=NGYxNjY4MjUtNjQyNS00MWM2LThlMmEtZTg1ODI2YjZlMWIz&sourceId=urlshare',
           },
         },
       ],
